--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="menu" class="col-10">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">BLOG</a>
+          <a class="nav-link" href="blog.html">BLOG</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">SOCIAL</a>
